# nimOnAVR

./: .gitignore  00License.txt  00wirite-hex-to-avr.bat  LICENSE  Makefile  README.md  config.nims  fcc.bat  setenv.bat
.github/workflows/: run.yml
example1/led/: Makefile  config.nims
example1/led/src/: main.nim
example1/led/src/avr/: iom328p.nim
example1/nimOnArduino/: 00wirite-hex-to-avr.bat  Makefile  blink.nim  config.nims  led.c  nim.cfg
example1/struct_test_cmake/: CMakeLists.txt  Makefile  avr-toolchain.cmake  config.nims  nim.cfg
example1/struct_test_cmake/src/: compile_flags.txt  main.nim  student.c  student.h  xprintf_test.c
example1/struct_test_cmake/src/lib/xprintf/xprintf_float/: xprintf.h
example1/uart/: Makefile  config.nims  nim.cfg
example1/uart/src/: main.nim
example1/uart/src/lib/: reg_utils.nim
example1/uart_led/: config.nims
example1/uart_led/src/: delay.nim  main.nim  panicoverride.nim
example1/uart_led/src/avr/: sfr_defs.nim
example1/uart_led/src/lib/xprintf/xprintf_int/: xprintf.h
example2/: config.nims  nim.cfg
example2/common/: common.mk
example2/common/avr/: board.nim  iom328p.nim  pwm.nim  sfr_defs.nim  spi.nim  system.nim  uart.nim
example2/common/lib/: fat_lib.nim  sd_card.nim
example2/common/lib/xprintf/xprintf_int/: xprintf.c
example2/intr_test/: Makefile  nim.cfg
example2/intr_test/src/: conf_sys.nim  main.nim  systick.nim
example2/sd_card/: sd_card_show_init_info.txt
example2/sd_card/src/: conf_sys.nim  main.nim  panicoverride.nim  systick.nim
